Modified to get to work

--- a/mailserver.env
+++ b/mailserver.env
@@ -11,7 +11,7 @@
 
 # empty => uses the `hostname` command to get the mail server's canonical hostname
 # => Specify a fully-qualified domainname to serve mail for.  This is used for many of the config features so if you can't set your hostname (e.g. you're in a container platform that doesn't let you) specify it in this environment variable.
-OVERRIDE_HOSTNAME=
+OVERRIDE_HOSTNAME=carina.neuromorphometrics.org
 
 # 0 => Debug disabled
 # 1 => Enables debug on startup
@@ -22,7 +22,7 @@ DMS_DEBUG=0
 # **warn** => Show warnings
 # info => Normal informational output
 # debug => Also show debug messages
-SUPERVISOR_LOGLEVEL=
+SUPERVISOR_LOGLEVEL=info
 
 # 0 => mail state in default directories
 # 1 => consolidate all states into a single directory (`/var/mail-state`) to allow persistence using docker volumes
@@ -69,7 +69,7 @@ TLS_LEVEL=
 #           See also https://en.wikipedia.org/wiki/Email_spoofing
 # 1 => (recommended) Mail spoofing denied. Each user may only send with his own or his alias addresses.
 #       Addresses with extension delimiters(http://www.postfix.org/postconf.5.html#recipient_delimiter) are not able to send messages.
-SPOOF_PROTECTION=
+SPOOF_PROTECTION=1
 
 # Enables the Sender Rewriting Scheme. SRS is needed if your mail server acts as forwarder. See [postsrsd](https://github.com/roehling/postsrsd/blob/master/README.md#sender-rewriting-scheme-crash-course) for further explanation.
 #  - **0** => Disabled
@@ -123,7 +123,7 @@ SMTP_ONLY=
 # custom => Enables custom certificates
 # manual => Let's you manually specify locations of your SSL certificates for non-standard cases
 # self-signed => Enables self-signed certificates
-SSL_TYPE=
+SSL_TYPE=self-signed
 
 # These are only supported with `SSL_TYPE=manual`.
 # Provide the path to your cert and key files that you've mounted access to within the container.
@@ -317,10 +317,10 @@ LDAP_QUERY_FILTER_DOMAIN=
 DOVECOT_TLS=
 
 # e.g. `"(&(objectClass=PostfixBookMailAccount)(uniqueIdentifier=%n))"`
-DOVECOT_USER_FILTER=
+DOVECOT_USER_FILTER="(&(objectClass=PostfixBookMailAccount)(uniqueIdentifier=%n))"
 
 # e.g. `"(&(objectClass=PostfixBookMailAccount)(uniqueIdentifier=%n))"`
-DOVECOT_PASS_FILTER=
+DOVECOT_PASS_FILTER="(&(objectClass=PostfixBookMailAccount)(uniqueIdentifier=%n))"
 
 # Define the mailbox format to be used
 # default is maildir, supported values are: sdbox, mdbox, maildir
